**XlsTestsUtils**: changed testXlsIndicator() to take T... params